Redesign JSON responses and fix unit tests